Added patch route, swagger fields, service url to .env
