# docs/swagger.json
@@ -16,6 +16,50 @@
                     "Music"
                 ],
                 "summary": "Получить данные о песнях",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Номер страницы",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Количество строк на странице",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Название группы",
+                        "name": "groupName",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Начальная дата фильтрации",
+                        "name": "startDate",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Конечная дата фильтрации",
+                        "name": "endDate",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ключевое слово в тексте",
+                        "name": "keyword",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -44,6 +88,15 @@
                         "name": "song",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "Структура обновления данных",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.UpdatedPutData"
+                        }
                     }
                 ],
                 "responses": {
@@ -149,10 +202,8 @@
                         }
                     }
                 }
-            }
-        },
-        "/info/param": {
-            "put": {
+            },
+            "patch": {
                 "description": "Изменяет данные песни по её ID",
                 "tags": [
                     "Music"
@@ -165,6 +216,15 @@
                         "name": "song",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "description": "Структура обновления данных",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.UpdatedPatchData"
+                        }
                     }
                 ],
                 "responses": {
@@ -270,6 +330,40 @@
                     "type": "string"
                 },
                 "releaseDate": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.UpdatedPatchData": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                },
+                "release_date": {
+                    "type": "string"
+                },
+                "song_name": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.UpdatedPutData": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                },
+                "release_date": {
+                    "type": "string"
+                },
+                "song_name": {
                     "type": "string"
                 },
                 "text": {
